--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "dependencies": {
     "@nivo/bullet": "^0.59.2",
+    "body-parser": "^1.19.0",
+    "csvtojson": "^2.0.10",
+    "express": "^4.17.1",
+    "multer": "^1.4.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "body-parser": "^1.19.0",
-    "express": "^4.17.1"
+    "react-scripts": "3.0.1"
   },
   "devDependencies": {
     "node-env-run": "^3.0.2",
