--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.2.1",
+    "@material-ui/icons": "^4.2.1",
     "@nivo/bullet": "^0.59.2",
     "body-parser": "^1.19.0",
     "csvtojson": "^2.0.10",
