--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
     "@nivo/bullet": "^0.59.2",
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
