--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "body-parser": "^1.19.0",
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
+    "material-table": "^1.40.1",
     "multer": "^1.4.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
