--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && rm -rf ./backend/build && cp -r ./build ./backend/build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "nodemon ./backend/server.js",
