--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^4.2.1",
     "@material-ui/icons": "^4.2.1",
+    "@nivo/bar": "^0.59.2",
     "@nivo/bullet": "^0.59.2",
     "@nivo/calendar": "^0.59.1",
     "@nivo/radar": "^0.59.1",
