--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@nivo/radar": "^0.59.1",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "csv-parser": "^2.3.0",
     "csvtojson": "^2.0.10",
     "express": "^4.17.1",
+    "google-auth-library": "^5.1.2",
+    "googleapis": "^39.2.0",
     "material-table": "^1.40.1",
     "multer": "^1.4.2",
     "react": "^16.8.6",
